# oghma

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: model-comparison.md
docs/brainstorms/: 2026-02-05-oghma-architecture-brainstorm.md
docs/plans/: 2026-02-05-feat-oghma-mvp-plan.md  2026-02-05-feat-vector-search-pypi-plan.md
docs/solutions/: codex-parser-format-change.md
integrations/claude-code/: SKILL.md
scripts/: migrate_memu.py
src/oghma/: cli.py  config.py  daemon.py  dedup.py  embedder.py  exporter.py  extractor.py  mcp_server.py  migration.py  storage.py  watcher.py
src/oghma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oghma/parsers/: __init__.py  base.py  claude_code.py  codex.py  openclaw.py  opencode.py
tests/: test_cli_commands.py  test_config.py  test_daemon.py  test_dedup.py  test_embedder.py  test_exporter.py  test_extractor.py  test_mcp_server.py  test_migration.py  test_storage.py  test_watcher.py
tests/test_parsers/: test_claude_code.py  test_codex.py  test_openclaw.py  test_opencode.py  test_registry.py
