[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oghma"
version = "0.6.2"
description = "Unified AI memory layer for coding assistants"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Oghma Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
keywords = ["ai", "memory", "llm", "coding-assistant", "mcp", "embeddings"]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "rich>=13.0",
    "mcp[cli]>=1.0",
    "sqlite-vec>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/terry-li-hm/oghma"
Repository = "https://github.com/terry-li-hm/oghma.git"
"Bug Tracker" = "https://github.com/terry-li-hm/oghma/issues"

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.0",
]
dedup = [
    "numpy>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
oghma = "oghma.cli:main"
oghma-mcp = "oghma.mcp_server:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
